--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   outline: none;
 }
 
+body{
+  background-color: hsl(5, 100%, 97%);
+}
+
 :root{
   height: 100vh;
 }
@@ -14,11 +18,12 @@
   position: fixed;
   width: 100%;
   height: 65px;
-  background-color: #fde8e0;
+  background-color: hsl(32, 100%, 92%);
   padding: 10px 20px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
+  z-index: 20;
 }
 
 #logo {
@@ -58,7 +63,7 @@
 }
 
 .navbar-content > :not(:first-child):hover {
-  background-color: #f3dfd9;
+  background-color: rgba(255, 218, 185, 0.587);
 }
 
 .search {
@@ -103,7 +108,7 @@
   width: 200px;
   top: 100%;
   left: -50%;
-  background-color: #f3dfd9;
+  background-color: hsl(28, 100%, 90%);
   transition: all 0.3s ease;
   z-index: 10;
   opacity: 0;
@@ -118,12 +123,143 @@
   pointer-events: all;
 }
 
-.genre-dropdown li {
+.genre-dropdown li{
   cursor: pointer;
   list-style: none;
   margin-bottom: 10px;
 }
 
-.genre-dropdown li:hover{
+
+.genre-dropdown li > *{
+  color: hsl(16, 9%, 50%);
+  font-size: 1.2rem;
+}
+
+.genre-dropdown li > *:hover{
+  color: hsl(16, 9%, 10%);
+}
+
+.genre,.about,.cart,.account,.current_genre{
+  padding-top: 70px;
+  height: 100vh;
+  background-color: beige;
+}
+
+.homepage{
+  height: 100vh;
+  width: 100vw;
+  background-color: blue;
+}
+
+.searchpage{
+  padding: 100px 30px;
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+}
+
+.book-card{
+  min-height: 400px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 8px grey ;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+  padding: 15px 5px;
+  align-items: center;
+  transition: all 0.3s;
+  background-color: white;
+}
+
+.book-card:hover{
+  transform: scale(1.07);
+}
+
+.book-image-box{
+  width: 120px;
+  height: 180px;
+}
+
+.book-image{
+  width: 100%;
+  height: 100%;
+}
+
+.book-title{
+  font-family: "poppins";
+  color: hsl(16, 9%, 50%);
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.book-price{
+  display: flex;
+  gap: 10px;
+}
+
+.book-price-original{
+  text-decoration: line-through;
+  font-family: "poppins";
+  color: hsl(16, 9%, 70%);
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.book-price-current{
+  font-family: "poppins";
   color: hsl(16, 9%, 40%);
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.book-quantity{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-family: "poppins";
+  color: hsl(16, 9%, 40%);
+  font-size: 18px;
+}
+
+.book-quantity button{
+  cursor: pointer;
+  border: none;
+  padding: 5px 10px;
+  background-color: hsl(198, 100%, 85%);
+  border-radius: 5px;
+  font-family: "poppins";
+  color: hsl(16, 9%, 40%);
+  font-size: 18px;
+}
+
+.book-quantity button:hover{
+  background-color: hsl(198, 100%, 70%);
+}
+
+.add-to-cart-button{
+  cursor: pointer;
+  border: none;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  padding: 10px 20px;
+  background-color: hsl(348, 59%, 85%);
+  border-radius: 10px;
+}
+
+.add-to-cart-button p{
+  font-size: 18px;
+  font-family: "poppins";
+  color: hsl(16, 9%, 40%);
+}
+
+.add-to-cart-button img{
+  width: 25px;
+  height: 25px;
+}
+
+.add-to-cart-button:hover{
+ background-color: hsl(348, 59%, 70%);
 }
