--- a/src/index.css
+++ b/src/index.css
@@ -147,12 +147,13 @@
   display: grid;
   gap: 30px;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  background-color: #fdfaf6;
 }
 
 .book-card {
   min-height: 400px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 8px grey;
+  border-radius: 15px;
+  box-shadow: 0px 0px 10px hsl(0, 0%, 70%);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -160,7 +161,7 @@
   padding: 15px 5px;
   align-items: center;
   transition: all 0.3s;
-  background-color: white;
+  background-color: #f5eee6;
 }
 
 .book-card:hover {
@@ -170,11 +171,13 @@
 .book-image-box {
   width: 120px;
   height: 180px;
+  border-radius: 15px;
 }
 
 .book-image {
   width: 100%;
   height: 100%;
+  border-radius: 15px;
 }
 
 .book-title {
@@ -200,76 +203,39 @@
 .book-price-original {
   text-decoration: line-through;
   font-family: "poppins";
-  color: hsl(16, 9%, 70%);
+  color: hsl(0, 13%, 70%);
   font-size: 18px;
   font-weight: 500;
 }
 
 .book-price-current {
   font-family: "poppins";
-  color: hsl(16, 9%, 40%);
+  color: #8f6d6d;
   font-size: 18px;
   font-weight: 500;
-}
-
-.book-quantity {
-  display: flex;
-  align-items: center;
-  gap: 3px;
-  font-family: "poppins";
-  color: hsl(16, 9%, 40%);
-  font-size: 18px;
-}
-
-.book-quantity button {
-  cursor: pointer;
-  border: none;
-  padding: 5px 10px;
-  background-color: hsl(198, 100%, 85%);
-  border-radius: 5px;
-  font-family: "poppins";
-  color: hsl(16, 9%, 40%);
-  font-size: 18px;
-}
-
-.book-quantity p {
-  text-align: center;
-  width: 25px;
-}
-
-.book-quantity button:hover {
-  background-color: hsl(198, 100%, 70%);
 }
 
 .add-to-cart-button {
   cursor: pointer;
   border: none;
   border-radius: 10px;
-}
-
-.add-to-cart-box{
   display: flex;
   align-items: center;
   gap: 15px;
   padding: 10px 20px;
-  background-color: hsl(348, 59%, 85%);
-  border-radius: 10px;
+  background-color: #ffb4b4;
+  transition: all 0.3s;
 }
 
-.added-to-cart-box{
-  padding: 10px 20px;
-  background-color: hsl(153, 50%, 74%);
-  border-radius: 10px;
-  font-size: 18px;
-  font-family: "poppins";
-  color: hsl(16, 9%, 50%);
-
+.item-added {
+  background-color: hsl(179, 43%, 70%);
+  transition: all 0.3s;
 }
 
 .add-to-cart-button p {
   font-size: 18px;
   font-family: "poppins";
-  color: hsl(16, 9%, 40%);
+  color: #8f6d6d;
 }
 
 .add-to-cart-button img {
@@ -277,8 +243,12 @@
   height: 25px;
 }
 
-.add-to-cart-box:hover {
-  background-color: hsl(348, 59%, 70%);
+.add-to-cart-button:hover {
+  background-color: hsl(0, 100%, 75%);
+}
+
+.add-to-cart-button.item-added:hover {
+  background-color: hsl(179, 43%, 50%);
 }
 
 .loading-page {
@@ -293,8 +263,8 @@
   background-color: hsl(5, 100%, 97%);
   width: 80px;
   height: 80px;
-  border: 10px solid peachpuff;
-  border-top: 10px solid coral;
+  border: 10px solid #ffb4b4;
+  border-top: 10px solid hsl(0, 100%, 75%);
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
@@ -319,28 +289,31 @@
   top: 0%;
   width: 25px;
   height: 25px;
-  background-color: coral;
+  background-color: hsl(0, 100%, 75%);
   border-radius: 50%;
   font-size: 16px;
   font-weight: 500;
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #fdfaf6;
 }
 
 .cart {
+  min-height: 100vh;
   padding-top: 150px;
+  background-color: #fdfaf6;
 }
 
 .cart-content {
-  max-width: 1000px;
+  max-width: 1200px;
   margin: auto;
   padding: 20px;
 }
 
 .cart-content h1 {
   font-family: "poppins";
-  color: hsl(16, 9%, 50%);
+  color: #8f6d6d;
   font-size: 24px;
 }
 
@@ -352,9 +325,11 @@
 }
 
 .cart-content-box-left {
-  background-color: rgb(243, 238, 235);
-  width: 700px;
+  background-color: #f5eee6;
+  max-width: 900px;
   padding: 20px;
+  box-shadow: 0px 0px 15px hsl(0, 0%, 70%);
+  border-radius: 15px;
 }
 
 .cart-content-box-left-inner {
@@ -365,7 +340,7 @@
 .cart-content-box-left-inner-up {
   display: flex;
   font-family: "poppins";
-  color: hsl(16, 9%, 50%);
+  color: #8f6d6d;
   font-weight: 500;
   justify-content: space-between;
 }
@@ -379,17 +354,15 @@
   margin-top: 15px;
   padding-top: 15px;
   display: flex;
-  justify-content: space-between;
-  border-top: 1px solid hsl(16, 9%, 50%);
+  gap: 25px;
+  border-top: 1px solid #8f6d6d;
 }
 
 .cart-item-left {
   display: flex;
-  gap: 20px;
-  max-width: 320px;
+  flex-grow: 1;
+  gap: 10px;
 }
-
-
 
 .title {
   color: #c96868;
@@ -399,21 +372,14 @@
   color: #7eacb5;
 }
 
-.cart-item-image-box {
-  min-width: 80px;
-  height: 180px;
-  border-radius: 10px;
-}
-
-.cart-item-image-box img{
-  width: 100%;
-  height: 100%;
+.cart-item-image {
+  width: 100px;
+  height: 150px;
   border-radius: 10px;
 }
 
 .cart-item-details-box {
   font-family: "poppins";
-  color: hsl(16, 9%, 50%);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -425,6 +391,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: #8f6d6d;
 }
 
 .cart-item-quantity button {
@@ -433,13 +400,13 @@
   padding: 3px 8px;
   border-radius: 5px;
   font-family: "poppins";
-  color: hsl(16, 9%, 50%);
+  color: #8f6d6d;
   background-color: hsl(198, 100%, 87%);
   font-size: 18px;
 }
 
 .cart-item-quantity button:hover {
-  background-color: hsl(198, 100%, 70%);
+  background-color: hsl(201, 67%, 70%);
 }
 
 .remove-button {
@@ -448,18 +415,19 @@
   border: none;
   padding: 5px 10px;
   font-size: 18px;
-  background-color: hsl(16, 100%, 85%);
+  background-color: #e5707e;
   border-radius: 10px;
+  color: white;
 }
 
 .remove-button:hover {
-  background-color: hsl(16, 100%, 70%);
+  background-color: hsl(353, 69%, 50%);
 }
 
 .cart-item-right {
   display: flex;
   font-family: "poppins";
-  color: hsl(16, 9%, 50%);
+  color: #8f6d6d;
   gap: 35px;
 }
 
@@ -487,15 +455,19 @@
 }
 
 .cart-content-box-right-up {
-  background-color: rgb(243, 238, 235);
+  background-color: #f5eee6;
   font-family: "poppins";
-  color: hsl(16, 9%, 50%);
+  color: #8f6d6d;
   padding: 20px 30px;
+  box-shadow: 0px 0px 15px hsl(0, 0%, 70%);
+  border-radius: 15px;
 }
 
 .cart-content-box-right-down {
-  background-color: rgb(243, 238, 235);
+  background-color: #f5eee6;
   padding: 20px 30px;
+  box-shadow: 0px 0px 15px hsl(0, 0%, 70%);
+  border-radius: 15px;
 }
 
 .summary {
@@ -519,6 +491,16 @@
 .delivery-charge {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 5px;
+}
+
+.discount {
+  display: flex;
+  justify-content: space-between;
+}
+
+.discount.promo {
+  color: #fd8a8a;
 }
 
 .final-amount-box {
@@ -528,6 +510,19 @@
   justify-content: space-between;
 }
 
+.total.promo {
+  text-decoration: line-through;
+}
+
+.total-with-discount {
+  display: none;
+}
+
+.total-with-discount.promo {
+  display: block;
+  color: #54bab9;
+}
+
 .pay-button {
   margin-top: 30px;
   margin-left: 15px;
@@ -535,28 +530,29 @@
   border: none;
   border-radius: 30px;
   font-family: "poppins";
-  color: hsl(16, 9%, 50%);
+  color: #8f6d6d;
   font-size: 18px;
   padding: 15px 20px;
-  background-color: peachpuff;
+  background-color: #ffb4b4;
 }
 
 .pay-button:hover {
-  background-color: hsl(28, 100%, 70%);
+  background-color: hsl(0, 100%, 75%);
 }
 
-.promo-code {
+.promo-code-heading {
   font-family: "poppins";
-  color: hsl(16, 9%, 50%);
+  color: #8f6d6d;
   font-size: 18px;
   padding-bottom: 10px;
-  border-bottom: 1px solid;
+  border-bottom: 1px solid #8f6d6d;
 }
 
 .promo-code-input {
   margin-top: 10px;
   display: flex;
   gap: 5px;
+  margin-bottom: 20px;
 }
 
 .promo-code-input input {
@@ -567,7 +563,7 @@
   border-radius: 8px;
   font-family: "poppins";
   font-size: 14px;
-  color: hsl(16, 9%, 50%);
+  color: #8f6d6d;
 }
 
 .promo-code-input button {
@@ -577,11 +573,321 @@
   padding: 5px 10px;
   font-family: "poppins";
   font-size: 14px;
-  background-color: hsl(348, 59%, 85%);
+  background-color: #54bab9;
   font-weight: 500;
-  color: hsl(16, 9%, 40%);
+  color: white;
 }
 
 .promo-code-input button:hover {
-  background-color: hsl(348, 59%, 70%);
+  background-color: hsl(179, 43%, 43%);
 }
+
+.promo-code-list-heading {
+  color: #8f6d6d;
+  font-size: 18px;
+  font-family: "poppins";
+  margin-bottom: 5px;
+}
+
+.promo-code {
+  background-color: #d1e9f6;
+  font-family: "poppins";
+  color: #8f6d6d;
+  font-size: 16px;
+  padding: 5px 10px;
+  margin-bottom: 5px;
+  border-radius: 10px;
+}
+
+.promo-code:hover {
+  cursor: pointer;
+  background-color: hsl(201, 67%, 70%);
+}
+
+.cart-empty-page {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fdfaf6;
+  padding: 20px;
+  padding-top: 100px;
+}
+
+.cart-empty-page-content {
+  background-color: #f5eee6;
+  border-radius: 20px;
+  padding: 40px 30px;
+  box-shadow: 0px 0px 15px hsl(0, 0%, 70%);
+}
+
+.cart-empty-page-heading {
+  font-size: 2.5rem;
+  font-family: "poppins";
+  color: #8f6d6d;
+  font-weight: 500;
+  margin-bottom: 10px;
+
+  text-align: center;
+}
+
+.cart-empty-page-text1 {
+  text-align: center;
+  font-size: 1.5rem;
+  font-family: "poppins";
+  color: #fd8a8a;
+  margin-bottom: 10px;
+}
+
+.cart-empty-page-text2 {
+  text-align: center;
+  font-size: 1.2rem;
+  font-family: "poppins";
+  color: #8f6d6d;
+  margin-bottom: 10px;
+}
+
+.shop-books-link img {
+  width: 30px;
+  height: 30px;
+}
+
+.shop-books-link {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 200px;
+  height: 60px;
+  text-decoration: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background-color: #ffb4b4;
+  border-radius: 15px;
+  font-family: "poppins";
+  font-size: 1.3rem;
+  color: #8c7b75;
+}
+
+.shop-books-link:hover {
+  background-color: hsl(0, 100%, 75%);
+}
+
+.promo-code-message {
+  color: white;
+  font-size: 11.8px;
+  font-weight: 500;
+  font-family: "poppins";
+  margin-bottom: 5px;
+  padding: 5px 7px;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.create-account-page {
+  display: flex;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  padding-top: 100px;
+  background-color: #fdfaf6;
+}
+
+.create-account-form {
+  padding: 50px 35px;
+  background-color: #f5eee6;
+  border-radius: 20px;
+  box-shadow: 0px 0px 15px hsl(0, 0%, 70%);
+}
+
+.form-quote {
+  font-family: "poppins";
+  font-size: 1.3rem;
+  text-align: center;
+  color: #c96868;
+}
+
+.form-quote-writer {
+  font-family: "poppins";
+  font-size: 1.1rem;
+  text-align: center;
+  color: #7eacb5;
+  margin-bottom: 20px;
+}
+
+.form-welcome-message {
+  font-family: "poppins";
+  font-size: 1.8rem;
+  text-align: center;
+  color: #8f6d6d;
+  margin-bottom: 20px;
+}
+
+.form-fields label,
+.form-fields input {
+  display: block;
+}
+
+.form-fields label {
+  font-family: "poppins";
+  font-size: 1.3rem;
+  color: #c4978b;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+
+.form-fields input {
+  padding: 10px 15px;
+  border: none;
+  width: 80%;
+  height: 40px;
+  border-radius: 10px;
+  font-size: 1.2rem;
+  color: #8f6d6d;
+  margin-bottom: 15px;
+  outline: none;
+}
+
+.create-account-button {
+  cursor: pointer;
+  border: none;
+  font-size: 1.3rem;
+  padding: 8px 15px;
+  font-family: "poppins";
+  color: #8f6d6d;
+  border-radius: 10px;
+  margin-top: 30px;
+  background-color: #ffb4b4;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.create-account-button:hover {
+  background-color: hsl(0, 100%, 75%);
+}
+
+.alternate-options-text {
+  font-family: "poppins";
+  color: #8f6d6d;
+  text-align: center;
+  font-size: 1.2rem;
+  margin-top: 25px;
+}
+
+.alternate-options-buttons {
+  margin-top: 20px;
+  display: flex;
+  gap: 100px;
+  justify-content: center;
+}
+
+.google-button,
+.apple-button {
+  border: none;
+  cursor: pointer;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  padding: 10px 15px;
+  font-size: 1.2rem;
+  font-family: "poppins";
+  color: #8f6d6d;
+  border-radius: 10px;
+  background-color: #d1e9f6;
+}
+
+.google-button:hover {
+  background-color: hsl(201, 67%, 75%);
+}
+
+.apple-button {
+  background-color: #ffc6ac;
+}
+
+.apple-button:hover {
+  background-color: hsl(19, 100%, 75%);
+}
+
+.alternate-options-buttons img {
+  width: 30px;
+  height: 30px;
+}
+
+.form-submitted-page {
+  padding: 10px;
+  padding-top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #fdfaf6;
+}
+
+.form-submitted-content {
+  background-color: #f5eee6;
+  padding: 50px 30px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 15px hsl(0, 0%, 70%);
+}
+
+.form-submitted-heading {
+  font-family: "poppins";
+  font-size: 2rem;
+  color: #54bab9;
+  text-align: center;
+  margin-bottom: 15px;
+  font-weight: 500;
+}
+
+.form-submitted-text1 {
+  font-family: "poppins";
+  font-size: 1.5rem;
+  color: #8f6d6d;
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+}
+
+.form-submitted-text1 p {
+  color: #e5707e;
+}
+
+.form-submitted-text2 {
+  font-family: "poppins";
+  font-size: 1.1rem;
+  color: #c96868;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.form-submitted-link {
+  cursor: pointer;
+  font-family: "poppins";
+  font-size: 1.2rem;
+  color: #8f6d6d;
+  background-color: #ffb4b4;
+  padding: 15px 20px;
+  border-radius: 20px;
+  position: relative;
+  left: 10%;
+}
+
+.form-submitted-link:hover {
+  background-color: hsl(0, 100%, 75%);
+}
+
+.invalid-fullname-message,
+.invalid-email-message,
+.invalid-password-message,
+.invalid-confirm-password-message {
+  font-family: "poppins";
+  font-size: 0.85rem;
+  color: #e5707e;
+}
+
+
