--- a/src/index.css
+++ b/src/index.css
@@ -853,7 +853,6 @@
 
 .homepage{
   padding-top: 75px;
-  height: 500vh;
 }
 
 
@@ -1035,27 +1034,57 @@
   border-radius: 5px;
 }
 
-.bestsellers-section,.recommendation-section,.explore-genres-section{
+.bestsellers-section,.recommendation-section,.explore-genres-section,.quotes-section,.newsletter-section{
   padding-top: 50px;
   padding-left: 5px;
   padding-right: 5px;
+  border-bottom: 1px solid #F4BFBF;
+  padding-bottom: 30px;
+}
+
+.quotes-section,.newsletter-section{
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.newsletter-section{
+  border: none;
+  padding-bottom: 0px;
 }
 
 .bestsellers-content,.recommendation-content,.explore-genres-content{
   max-width: 1500px;
   margin: auto;
-  padding-bottom: 30px;
   padding-left: 5px;
   padding-right: 5px;
-  border-bottom: 1px solid rgba(128, 128, 128, 0.717);
-  
+}
+
+.quotes-content{
+  max-width: 1500px;
+  margin: auto;
+}
+
+.newsletter-content{
+  max-width: 1200px;
+  margin: auto;
+  padding: 50px 30px;
+  padding-bottom: 100px;
+  background-color: #F5DAD2;
+  border-radius: 20px;
+  box-shadow: 0px 0px 5px rgba(128, 128, 128, 0.646);
+}
+
+.quotes-grid{
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
 }
 
 .explore-genres-content{
   max-width: 1200px;
 }
 
-.bestsellers-content h1,.recommendation-content h1,.explore-genres-content h1{
+.bestsellers-content h1,.recommendation-content h1,.explore-genres-content h1,.quotes-content h1{
   font-family: "Allura", cursive;
   color: #8d5863;
   text-align: center;
@@ -1145,26 +1174,225 @@
   background-color: hsl(41, 100%, 87%);
 }
 
-@media (width<=803px) {
-  .explore-genres-grid{
-    grid-template-columns: repeat(2,1fr);
-  }
-  .explore-genres-content h1{
-    font-size: 3.5rem;
-  }
+.quotes{
+  border-radius: 20px;
+  padding: 50px 30px;
+  background-color: #FFE9D0;
+  max-width: 500px;
+  box-shadow: 0px 0px 5px rgba(128, 128, 128, 0.799);
 }
 
-@media (width<=545px) {
-  .explore-genres-grid{
-    grid-template-columns: repeat(1,1fr);
-    grid-template-rows: repeat(6,1fr);
-  }
+.quote{
+  font-family: "Tangerine", serif;
+  font-size: 2rem;
+  margin-bottom: 5px;
+  color: #c96868;
+  font-weight: 600;
+  text-align: center;
+}
+
+.quote-writer{
+  font-family:  "poppins";
+  font-size: 1.1rem;
+  color: #54bab9;
+  text-align: center;
   
 }
 
-.current-genre{
-  padding-top: 100px;
+.newsletter-content h1{
+  font-family: "Allura", cursive;
+  color: #8d5863;
+  text-align: center;
+  font-size: 4rem;
+  font-weight: 600;
 }
 
+.newsletter-content p{
+  font-family: "poppins";
+  font-size: 1.2rem;
+  color: #e5707e;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.newsletter-form{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.newsletter-input{
+  border: none;
+  box-shadow: 0px 0px 5px #e5707e;
+  padding: 10px 15px;
+  font-family: "poppins";
+  font-size: 1rem;
+  border-radius: 10px;
+  color: #e5707e;
+}
+
+.newsletter-button{
+  border: none;
+  cursor: pointer;
+  background-color: #ffb4b4;
+  border-radius: 10px;
+  padding: 10px 15px;
+  font-family: "poppins";
+  font-size: 1.1rem;
+  color: #8d5863;
+}
+
+.newsletter-button:hover{
+  background-color: hsl(0, 100%, 75%);
+}
+
+.footer-section{
+  margin-top: 80px;
+  background-color: #F8EAD8;
+  padding: 80px 25px;
+}
+
+.footer-content{
+  max-width: 1100px;
+  margin: auto;
+}
+
+.footer-top{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 70px;
+  
+}
+
+.footer-logo img{
+  width: 80px;
+  height: 80px;
+}
+
+.footer-logo{
+  font-family: "poppins";
+  color: #8f6d6d;
+  font-size: 1rem;
+}
+
+.footer-logo>:nth-child(2){
+  font-family: "poppins";
+  color: #8f6d6d;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.footer-quick-links p{
+  font-family: "poppins";
+  color: #8f6d6d;
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.footer-quick-links div{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  font-family: "poppins";
+}
+
+.footer-quick-links>div>*{
+  color: #8f6d6d;
+  transition: all 0.3s;
+}
+
+.footer-quick-links>div>*:hover{
+  color: #e5707e;
+  text-decoration: underline;
+}
+
+
+.footer-social p{
+  font-family: "poppins";
+  color: #8f6d6d;
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.social-links{
+  display: flex;
+  gap: 5px;
+}
+
+.social-links img{
+  width: 30px;
+  height: 30px;
+  border-radius: 5px;
+  transition: all 0.3s;
+}
+
+.social-links img:hover{
+  background-color: hsl(353, 69%, 87%);
+
+}
+
+.footer-newsletter p{
+   font-family: "poppins";
+  color: #8f6d6d;
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.footer-newsletter div{
+  display: flex;
+  gap: 10px;
+}
+
+.footer-newsletter input{
+  border: none;
+  border-radius: 20px;
+  width: 200px;
+  height: 30px;
+  padding: 8px;
+  font-family: "poppins";
+  font-size: 0.8rem;
+   color: #8f6d6d;
+}
+
+.footer-newsletter button{
+  cursor: pointer;
+  border: none;
+  padding: 8px 10px;
+  font-family: "poppins";
+  border-radius: 20px;
+  color: #8f6d6d;
+  background-color: #ffb4b4;
+}
+
+.footer-newsletter button:hover{
+background-color: hsl(0, 100%, 75%);
+}
+
+.footer-bottom{
+  margin-top: 20px;
+  border-top: 1px solid #8f6d6d;
+  padding-top: 20px;
+}
+
+.footer-bottom p{
+  text-align: center;
+  font-family: "poppins";
+  color: #8f6d6d;
+}
+
+.footer-bottom a{
+  font-family: "poppins";
+  color: #8f6d6d;
+}
+
+.footer-bottom a:hover{
+   color: #e5707e;
+  text-decoration: underline;
+}
 
 
