--- a/src/index.css
+++ b/src/index.css
@@ -976,6 +976,7 @@
   border: 2px solid #F4BFBF;
 }
 
+
 .book-card-image-box{
   height: 300px;
   border-top-left-radius: 10px;
@@ -1176,11 +1177,18 @@
 }
 
 .quotes{
+  cursor: pointer;
   border-radius: 20px;
   padding: 50px 30px;
   background-color: #FFE9D0;
   max-width: 500px;
   box-shadow: 0px 0px 5px rgba(128, 128, 128, 0.799);
+  transition: all 0.3s;
+}
+
+.quotes:hover{
+  transform: scale(1.05);
+  background-color: hsl(32, 100%, 80%);
 }
 
 .quote{
@@ -1511,4 +1519,64 @@ background-color: hsl(0, 100%, 75%);
   text-align: center;
   margin-bottom: 20px;
 }
+
+.genre-top-authors-content{
+  max-width: 1500px;
+  margin: auto;
+}
+
+.genre-top-authors-heading{
+  font-family: "Allura";
+  color: #8d5863;
+  font-size: 3rem;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.author-card{
+  width: 300px;
+  height: 330px;
+  border-radius: 20px;
+  padding: 25px 10px;
+  background-color: #FFE3E3;
+  border: 1px solid #DBB5B5;
+}
+
+.author-cover{
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  position: relative;
+  left: 33%;
+  margin-bottom: 10px;
+  
+}
+
+.author-card img{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.author-name{
+  font-family: "poppins";
+  font-size: 1.1rem;
+  color: #8d5863;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.author-description{
+  font-family: "poppins";
+  font-size: 0.95rem;
+  color: #8f6d6d;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+
+
 
